--- a/mapDrawsOL/package.json
+++ b/mapDrawsOL/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
