--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3"
+  },
+  "dependencies": {
+    "ol": "^10.4.0"
   }
 }
