--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "tailwindcss": "^4.0.3"
   },
   "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^11.1.0",
     "ol": "^10.4.0"
   }
 }
