--- a/mapDrawsOL/package.json
+++ b/mapDrawsOL/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
     "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
+    "framer-motion": "^12.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
