--- a/mapDrawsOL/vercel.json
+++ b/mapDrawsOL/vercel.json
@@ -1,6 +1,6 @@
 {
     "framework": "vite",
-    "buildCommand": "npm run build",
+    "buildCommand": "npm install && npm run build",
     "outputDirectory": "dist",
-     "installCommand": "npm install"
-  }
+    "installCommand": "npm install"
+}
