--- a/mapDrawsOL/vercel.json
+++ b/mapDrawsOL/vercel.json
@@ -1,6 +1,13 @@
 {
+    "version": 2,
     "framework": "vite",
-    "buildCommand": "npm install && npm run build",
+    "buildCommand": "./node_modules/.bin/vite build",
     "outputDirectory": "dist",
-    "installCommand": "npm install"
-}
+    "installCommand": "npm install",
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/node"
+      }
+    ]
+  }
