--- a/mapDrawsOL/vercel.json
+++ b/mapDrawsOL/vercel.json
@@ -1,13 +1,15 @@
 {
     "version": 2,
-    "framework": "vite",
-    "buildCommand": "./node_modules/.bin/vite build",
-    "outputDirectory": "dist",
-    "installCommand": "npm install",
     "builds": [
       {
         "src": "package.json",
-        "use": "@vercel/node"
+        "use": "@vercel/vite"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
