--- a/mapDrawsOL/package.json
+++ b/mapDrawsOL/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && ./node_modules/.bin/vite build",
+    "build": "npx tsc && npx vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
