--- a/mapDrawsOL/vercel.json
+++ b/mapDrawsOL/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "package.json",
-        "use": "@vercel/vite"
+        "use": "@vercel/vite",
+        "config": {
+          "buildCommand": "npm run build"
+        }
       }
     ],
     "routes": [
