--- a/mapDrawsOL/vercel.json
+++ b/mapDrawsOL/vercel.json
@@ -5,7 +5,7 @@
         "src": "package.json",
         "use": "@vercel/node",
         "config": {
-          "buildCommand": "./node_modules/.bin/vite build"
+          "buildCommand": "node ./node_modules/vite/bin/vite.js build"
         }
       }
     ],
