fix 404 code not found

--- a/vercel.json
+++ b/vercel.json
@@ -5,17 +5,9 @@
       "src": "package.json",
       "use": "@vercel/node",
       "config": {
-        "buildCommand": "node ./node_modules/vite/bin/vite.js build"
+        "buildCommand": "vite build"
       }
     }
   ],
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/.*",
-      "dest": "/index.html"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
