--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,5 @@
       }
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
